--- a/styles/style.css
+++ b/styles/style.css
@@ -12,3 +12,37 @@
 .form {
   margin: 20px 0;
 }
+
+.fade-enter-active,
+.fade-leave-active {
+  opacity: 1;
+  transform: rotate(0);
+  scale: 1;
+  transition: opacity 0.5s ease, transform 0.5s ease, scale 0.5s ease;
+}
+
+.fade-enter-from,
+.fade-leave-to {
+  opacity: 0;
+  transform: rotate(15deg);
+  scale: 0.9;
+}
+
+.bounce-enter-active {
+  animation: bounce-in 0.5s;
+}
+.bounce-leave-active {
+  animation: bounce-in 0.5s reverse;
+}
+
+@keyframes bounce-in {
+  0% {
+    transform: scale(0);
+  }
+  50% {
+    transform: scale(1.25);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
